<resources>
    <string name="app_name">MarketCam</string>

    <!-- STRINGS REFERENTES A "activity_primeira / primeiraActivity" -->
    <string name="btnNCadastroT1">Ainda Não Possui Cadastro?</string>
    <string name="btnJCadastroT1">Já Possui um Cadastro?</string>


    <!-- STRINGS REFERENTES A "activity_segunda / segundaActivity" -->
    <string name="editNomeT2"></string>
    <string name="radioClienteT2">Cliente</string>
    <string name="radioMercadoT2">Mercado</string>
    <string name="radioMasculinoT2">Masculino</string>
    <string name="radioFemininoT2">Feminino</string>
    <string name="editConfirmarSenhaT2"></string>
    <string name="editEmailT2" />
    <string name="editDataT2" />
    <string name="editSenhaT2" />
    <string name="textTipoContaT2">Tipo de Conta</string>
    <string name="textSexoT2">Sexo</string>
    <string name="textInformeDadosT2">INFORME OS SEUS DADOS ABAIXO</string>
    <string name="textDataNascimentoT2">Data de Nascimento</string>
    <string name="textCidadeT2">Cidade</string>
    <string name="textEstadoT2">Estado</string>
    <string name="btnCadastrarseT2">CADASTRAR-SE</string>
    <!-- SPINNER CIDADE-->
    <string-array name="cidadeSpinT2">
        <item>São Borja</item>
    </string-array>
    <!-- SPINNER ESTADO-->
    <string-array name="estadoSpinT2">
        <item>RS</item>
    </string-array>
    <string name="nomeObrigatorioT2">O campo NOME não pode ser vazio</string>


    <!-- STRINGS REFERENTES A "activity_terceira / terceiraActivity" -->
    <string name="editSenhaT3" />
    <string name="editEmailT3" />
    <string name="btnEntrarT3">ENTRAR</string>
    <string name="checkManterConectadoT3">Mantenha-me Conectado</string>
    <string name="btnEsqueciSenhaT3">Esqueci Minha Senha</string>
    <string name="textEfetuarLoginT3">EFETUE O SEU LOGIN</string>
    <string name="duassenhasObrigatoriaT3">As Senhas Não Correspondem</string>
    <string name="confirmar_senhaObrigatoriaT3">O campo CONFIRMAR SENHA não pode ser vazio</string>


    <!-- STRINGS REFERENTES A "activity_quarta / quartaActivity" -->
    <string name="textAdicionarProdutoT4">ADICIONAR UM PRODUTO A LISTA DE COMPRAS</string>
    <string name="textProdutoT4">Produto</string>
    <string name="textQuantidadeT4">Quantidade</string>
    <string name="editQuantidadeT4" />
    <string name="btnAdicionarProdutoT4">ADICIONAR PRODUTO</string>
    <string name="btnAdicionarCodigoBarrasT4">ADICIONAR PRODUTO PELO CÓDIGO DE BARRAS</string>


    <!-- STRINGS REFERENTES A "activity_quinta / quintaActivity" -->
    <string name="textEditarCadastroT5">EDITAR CADASTRO</string>
    <string name="textUsuarioT5">USUÁRIO</string>
    <string name="textNomeT5">Nome</string>
    <string name="editNomeT5" />
    <string name="textTelefoneT5">Telefone</string>
    <string name="editTelefoneT5" />
    <string name="textSexoT5">Sexo</string>
    <string name="radioMasculinoT5">Masculino</string>
    <string name="radioFemininoT5">Feminino</string>
    <string name="textDataNascimentoT5">Data de Nascimento</string>
    <string name="editDataNascimentoT5">Informe Sua Data de Nascimento</string>
    <string name="textTipoUsuarioT5">Tipo de Usuário</string>
    <string name="radioClienteT5">Cliente</string>
    <string name="radioMercadoT5">Mercado</string>
    <string name="textEmailT5">E-mail</string>
    <string name="editEmailT5" />
    <string name="textEnderecoT5">ENDEREÇO</string>
    <string name="textCidadeT5">Cidade</string>
    <string name="textEstadoT5">Estado</string>
    <string name="textCepT5">CEP</string>
    <string name="editCepT5">Informe o Seu CEP</string>
    <string name="textRuaT5">Rua</string>
    <string name="editRuaT5" />
    <string name="textNumeroRuaT5">Número da Rua</string>
    <string name="editNumeroRuaT5" />
    <string name="textBairroT5">Bairro</string>
    <string name="editBairroT5" />
    <string name="textCartaoCreditoT5">CARTÃO DE CRÉDITO</string>
    <string name="checkAtivaCartaoCreditoT5">Desejo Inserir um Cartão de Crédito</string>
    <string name="textNumeroCartaoT5">Número</string>
    <string name="editNumeroCartaoT5" />
    <string name="textTitularT5">Titular</string>
    <string name="editTitularT5" />
    <string name="textValidadeT5">Validade</string>
    <string name="editValidadetT5" />
    <string name="textCodigoT5">Código</string>
    <string name="checkCodigoCartaoT5">Salvar o Código do Cartão de Crédito?</string>
    <string name="editCodigoT5" />
    <string name="textSenhaT5">SENHA</string>
    <string name="checkAtivaMudarSenhaT5">Desejo Mudar a Minha Senha</string>
    <string name="textSenhaAntigaT5">Senha Antiga</string>
    <string name="editSenhaAntigaT5" />
    <string name="textNovaSenhaT5">Nova Senha</string>
    <string name="editNovaSenhaT5" />
    <string name="textConfirmarNovaSenhaT5">Confirmar Nova Senha</string>
    <string name="editConfirmarNovaSenhaT5" />
    <string name="btnSalvarT5">SALVAR</string>


    <!-- STRINGS REFERENTES A "activity_sexta / sextaActivity" -->
    <string name="textCriarListaT6">CRIAR UMA LISTA DE COMPRAS</string>
    <string name="textNomeListaT6">Nome</string>
    <string name="editNomeListaT6" />
    <string name="switchFavoritoT6">Favorito</string>
    <string name="btnCriarT6">CRIAR</string>


    <!-- STRINGS REFERENTES A "activity_setima / setimaActivity" -->
    <string name="btnUsuariosT7">Usuários</string>
    <string name="btnProdutosT7">Produtos</string>
    <string name="btnEnderecosT7">Endereços</string>
    <string name="btnListasComprasT7">Listas de Compras</string>
    <string name="btnComprasT7">Compras</string>
    <string name="btnCartõesCreditoT7">Cartões de Crédito</string>
    <string name="textUsuariosT7">Usuários</string>


    <!-- STRINGS REFERENTES A "activity_oitava / oitavaActivity" -->
    <string name="btnUsuariosT8">Usuários</string>
    <string name="btnProdutosT8">Produtos</string>
    <string name="btnEnderecosT8">Endereços</string>
    <string name="btnListasComprasT8">Listas de Compras</string>
    <string name="btnComprasT8">Compras</string>
    <string name="btnCartõesCreditoT8">Cartões de Crédito</string>
    <string name="textProdutosT8">Produtos</string>


    <!-- STRINGS REFERENTES A "activity_nona / nonaActivity" -->
    <string name="btnUsuariosT9">Usuários</string>
    <string name="btnProdutosT9">Produtos</string>
    <string name="btnEnderecosT9">Endereços</string>
    <string name="btnListasComprasT9">Listas de Compras</string>
    <string name="btnComprasT9">Compras</string>
    <string name="btnCartõesCreditoT9">Cartões de Crédito</string>
    <string name="textEnderecosT9">Endereços</string>


    <!-- STRINGS REFERENTES A "activity_decima / decimaActivity" -->
    <string name="btnUsuariosT10">Usuários</string>
    <string name="btnProdutosT10">Produtos</string>
    <string name="btnEnderecosT10">Enderecos</string>
    <string name="btnListasComprasT10">Listas de Compras</string>
    <string name="btnComprasT10">Compras</string>
    <string name="btnCartõesCreditoT10">Cartões de Crédito</string>
    <string name="textComprasT10">Compras</string>


    <!-- STRINGS REFERENTES A "activity_decima_primeira / decimaPrimeiraActivity" -->
    <string name="btnUsuariosT11">Usuários</string>
    <string name="btnProdutosT11">Produtos</string>
    <string name="btnEnderecosT11">Endereços</string>
    <string name="btnListasComprasT11">Listas de Compras</string>
    <string name="btnComprasT11">Compras</string>
    <string name="btnCartõesCreditoT11">Cartões de Crédito</string>
    <string name="textListasComprasT11">Listas de Compras</string>


    <!-- STRINGS REFERENTES A "activity_decima_segunda / decimaSegundaActivity" -->
    <string name="btnUsuariosT12">Usuários</string>
    <string name="btnProdutosT12">Produtos</string>
    <string name="btnEnderecosT12">Endereços</string>
    <string name="btnListasComprasT12">Listas de Compras</string>
    <string name="btnComprasT12">Compras</string>
    <string name="btnCartõesCreditoT12">Cartões de Crédito</string>
    <string name="textCartoesCreditoT12">Cartões de Créditos</string>


    <!-- STRINGS REFERENTES AO "C_R_U_D" -->
    <string name="atualizar_usuario">Usuario Atualizado</string>
    <string name="obrigatorio">Obrigatório</string>
    <string name="mensagem_cadastrar">Registro Cadastrado com Sucesso</string>
    <string name="mensagem_atualizar">Resgistro Atualizado com Sucesso</string>
    <string name="mensagem_erro">Erro ao Salvar</string>
    <!-- STRINGS PARA MENSAGENS DE ERRO -->
    <string name="emailObrigatorioT3">O campo E-MAIL não pode ser vazio</string>
    <string name="senhaObrigatoriaT3">O campo SENHA não pode estar vazio</string>
    <string name="loginincorretoT3">Login Incorreto</string>


    <!-- STRINGS REFERENTES AS XML's -->
    <string name="textListarProdutosEsquerda" />
    <string name="textListarUsuariosEsquerda" />
    <string name="textListarComprasEsquerda" />
    <string name="textListarListasEsquerda" />
    <string name="textListarCartao_CreditosEsquerda" />
    <string name="textListarEnderecosEsquerda" />
    <string name="textListarUsuariosDireita" />
    <string name="textListarProdutosDireita" />
    <string name="textListarEnderecosDireita" />
    <string name="textListarComprasDireita" />
    <string name="textListarListasDireita" />
    <string name="textListarCartao_CreditosDireita" />


    <!-- STRINGS CRIADAS AUTOMATICAS REFERENTES A "activity_decima_terceita / decimaTerceiraActivity" -->
    <string name="title_activity_decima_terceira">decimaTerceiraActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <!-- STRINGS SETADAS MANUALMENTE REFERENTES A "activity_decima_terceita / decimaTerceiraActivity" -->
    <string name="textEmailT13">usuario@marketcam.com</string>
    <string name="textNomeT13">Usuario</string>
    <string name="btnCapturaCodigoT13">CAPTURAR CÓDIGO</string>
    <string name="btnLimparT13">LIMPAR</string>


    <!-- STRINGS REFERENTES A "activity_decima_quarta / decimaQuartaActivity" -->
    <string name="textMeuCarrinhoT14">MEU CARRINHO</string>
    <string name="btnAdicionarT14">ADICIONAR MAIS PRODUTOS</string>
    <string name="btnRemoverT14">REMOVER</string>
    <string name="textValorTotalT14">VALOR TOTAL:</string>
    <string name="textRecebeValorTotalT14" />
    <string name="btnFinalizarPedidoT14">FINALIZAR PEDIDO</string>


    <!-- STRINGS REFERENTES A "activity_decima_quinta / decimaQuintaActivity" -->
    <string name="textContatoT15">CONTATO COM O DESENVOLVEDOR</string>
    <string name="editMeuEmailT15" />
    <string name="textEscolhaAcaoT15">ESCOLHA UMA AÇÃO</string>
    <string name="radioReclamacaoT15">Reclamação</string>
    <string name="radioReportarErroT15">Reportar Erro</string>
    <string name="radioDuvidaT15">Dúvida</string>
    <string name="radioMelhoriaT15">Melhoria</string>
    <string name="textDescricaoT15">DESCRIÇÃO</string>
    <string name="editMultiDescricaoT15" />
    <string name="btnEnviarT15">Enviar</string>

</resources>
