<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_quinta_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_quinta_linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="com.example.aluno.marketcam.segundaActivity">

        <TextView
            android:text="@string/textInformeDadosT2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textInformeDadosT2"
            android:layout_alignParentEnd="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editNomeT2"
            android:hint="Nome"
            android:layout_marginTop="11dp"
            android:layout_below="@+id/textInformeDadosT2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:textStyle="normal|italic"
            android:text="@string/editNomeT2"
            android:fontFamily="sans-serif-condensed" />

        <TextView
                android:text="@string/textTipoContaT2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textTipoContaT2"
                android:layout_below="@+id/editNomeT2"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"
            android:textStyle="normal|bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textTipoContaT2"
            android:layout_alignParentStart="true"
            android:id="@+id/radioTipoContaT2"
            android:orientation="horizontal">

            <RadioButton
                android:text="@string/radioClienteT2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioClienteT2"
                android:layout_below="@+id/textTipoContaT2"
                android:layout_alignParentStart="true"
                android:checked="true" />

            <RadioButton
                android:text="@string/radioMercadoT2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/radioClienteT2"
                android:layout_toEndOf="@+id/radioClienteT2"
                android:id="@+id/radioMercadoT2"
                android:layout_marginLeft="60dp" />
        </RadioGroup>

        <TextView
            android:text="@string/textSexoT2"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textTipoContaT2"
            android:layout_alignParentStart="true"
            android:id="@+id/textSexoT2"
            android:textStyle="normal|bold"
            android:layout_marginTop="15dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textSexoT2"
            android:layout_alignStart="@+id/textSexoT2"
            android:id="@+id/radioSexoT2"
            android:orientation="horizontal">

            <RadioButton
                android:text="@string/radioMasculinoT2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioMasculinoT2"
                android:layout_below="@+id/radioFemininoT2"
                android:layout_alignStart="@+id/radioGroup5" />

            <RadioButton
                android:text="@string/radioFemininoT2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radioFemininoT2"
                android:layout_below="@+id/textSexoT2"
                android:layout_alignStart="@+id/textSexoT2"
                android:layout_marginLeft="39dp" />
        </RadioGroup>

        <TextView
            android:text="@string/textDataNascimentoT2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textDataNascimentoT2"
            android:textStyle="normal|bold"
            android:layout_below="@+id/radioTipoContaT2"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp" />

        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dateDataT2"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            style="@android:style/Widget.DatePicker"
            android:spinnersShown="true" />

        <TextView
            android:text="@string/textCidadeT2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textCidadeT2"
            android:layout_alignBottom="@+id/spinCidadeT2"
            android:layout_alignParentStart="true"
            android:textStyle="normal|bold"
            android:layout_marginTop="15dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinCidadeT2"
            android:layout_below="@+id/editDataT2"
            android:layout_toStartOf="@+id/radioSexoT2" />

        <TextView
            android:text="@string/textEstadoT2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textEstadoT2"
            android:textStyle="normal|bold"
            android:layout_alignBottom="@+id/spinEstadoT2"
            android:layout_toEndOf="@+id/textSexoT2"
            android:layout_marginTop="15dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinEstadoT2"
            android:layout_below="@+id/editDataT2"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editEmailT2"
            android:hint="E-mail"
            android:textStyle="normal|italic"
            android:text="@string/editEmailT2"
            android:layout_above="@+id/editSenhaT2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editSenhaT2"
            android:hint="Senha"
            android:textStyle="normal|italic"
            android:text="@string/editSenhaT2"
            android:layout_above="@+id/editConfirmarSenhaT2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="sans-serif-condensed" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editConfirmarSenhaT2"
            android:hint="Confirmar Senha"
            android:textStyle="normal|italic"
            android:text="@string/editConfirmarSenhaT2"
            android:layout_above="@+id/btnCadastrarseT2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="sans-serif-condensed" />

        <Button
            android:text="@string/btnCadastrarseT2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnCadastrarseT2"
            android:layout_marginBottom="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:background="@drawable/aparencia_botao_login"
            android:textStyle="normal|bold"
            android:textColor="#131B2E" />

    </LinearLayout>
</ScrollView>