<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setima_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aluno.marketcam.setimaActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_setima_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/activity_setima_horizontal_scroll">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/activity_setima_linear_linear">

                <Button
                    android:text="@string/btnUsuariosT7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnUsuariosT7"
                    android:layout_weight="1"
                    android:layout_marginBottom="5dp"
                    android:textStyle="normal|bold" />

                <Button
                    android:text="@string/btnProdutosT7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnProdutosT7"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/btnEnderecosT7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnEnderecosT7"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/btnComprasT7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnComprasT7"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/btnListasComprasT7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnListasComprasT7"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/btnCartõesCreditoT7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnCartõesCreditoT7"
                    android:layout_weight="1" />
            </LinearLayout>
        </HorizontalScrollView>

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbarT7" />

        <TextView
            android:text="@string/textUsuariosT7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textUsuariosT7"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textStyle="normal|bold"
            android:layout_marginTop="5dp"
            android:textAlignment="center" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="393dp"
            android:layout_marginTop="15dp"
            android:id="@+id/listUsuariosT7" />
    </LinearLayout>
</ScrollView>
